--- a/src/styles/sidebarResult.css
+++ b/src/styles/sidebarResult.css
@@ -76,3 +76,6 @@
     background: rgba(0, 0, 0, 0.747);
     cursor: pointer;
 }
+.sideBarResultPanel .center .active{
+    background: rgba(0, 0, 0, 0.747);
+}
